Fixed styling errors: overlapping stylesheets.

--- a/AvantProjects/src/Components/QuestionSection.css
+++ b/AvantProjects/src/Components/QuestionSection.css
@@ -17,11 +17,11 @@
     margin: 30px 0px 20px 0px;
 }
 
-.image {
+.faq-image {
     position: relative;
 }
 
-.logo {
+.faq-logo {
     position: absolute;
     left: 10px;
     top: 40px;
